# RISCV-Simulator

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md  runme.sh
bash/: build-inclass-tests.sh  build-riscv-elfs.sh  build.sh
cache-trace/: 01-mcf-gem5-xcg.trace.csv  01-mcf-gem5-xcg.trace.xlsx  02-stream-gem5-xaa.trace.csv  1.trace  1.trace.csv  2.trace  2.trace.csv
cache-trace2/: 01-mcf-gem5-xcg.trace.csv  01-mcf-gem5-xcg.trace.xlsx  02-stream-gem5-xaa.trace.csv  1.trace.csv  2.trace.csv
docs/: Lab3.md  Lab4.md  lab2.md
riscv-elf/rv64i/inclass/: add.riscv  add.s  double-float.riscv  double-float.s  mul-div.riscv  mul-div.s  n!.riscv  n!.s  qsort.riscv  qsort.s  simple-function.riscv  simple-function.s
riscv-elf/rv64i/others/: ackermann.riscv  ackermann.s  helloworld.riscv  helloworld.s  matrixmulti.riscv  matrixmulti.s  quicksort.riscv  quicksort.s  test_arithmetic.riscv  test_arithmetic.s  test_branch.riscv  test_branch.s  test_syscall.riscv  test_syscall.s
riscv-elf/rv64im/inclass/: add.riscv  add.s  double-float.riscv  double-float.s  mul-div.riscv  mul-div.s  n!.riscv  n!.s  qsort.riscv  qsort.s  simple-function.riscv  simple-function.s
riscv-elf/rv64im/others/: ackermann.riscv  ackermann.s  (+12 more)
source-code/: BranchPredictor.cpp  BranchPredictor.hpp  Cache.cpp  Cache.hpp  CacheMain.cpp  CacheYouhuaMain.cpp  MemoryManager.cpp  MemoryManager.hpp  Simulator.cpp  Simulator.hpp  YuvImageProcessor.cpp  main.cpp
test/: ackermann.c  helloworld.c  lib.c  lib.h  matrixmulti.c  moshou4.cpp  quicksort.c  test_arithmetic.c  test_branch.c  test_syscall.c
